frontend almost done

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
     <center>
 
 
-        <form name="form" style="margin-top: 5%; width: 35%;">
+        <div name="form" style="margin-top: 5%; width: 35%;">
             <select id="catering">
                 <option value="ses">Waiting for input</option>
             </select>
@@ -28,7 +28,7 @@
                 <option value="ses">Waiting for input</option>
             </select>
             <button type="submit" onCLick="submitForm()">Create event</button>
-        </form>
+        </div>
 
     </center>
 
