--- a/frontend/events.html
+++ b/frontend/events.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
-<body class="bg">
+<body class="bg" onload = "getEvents()">
     <ul>
         <li><a href="index.html">Create event</a></li>
         <li><a href="#">See events</a></li>
