--- a/frontend/events.html
+++ b/frontend/events.html
@@ -5,9 +5,8 @@
 <head>
     <meta charset="utf-8">
 
-    <title>The HTML5 Herald</title>
-    <meta name="description" content="The HTML5 Herald">
-    <meta name="author" content="SitePoint">
+    <title>Event planner</title>
+
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -19,12 +18,12 @@
     <center>
 
 
-        <table style="width: 35%; margin-top: 5%;">
+        <table id="mytable" style="width: 45%; margin-top: 5%;">
                 <tr>
                         <th>Firstname</th>
                         <th>Lastname</th>
                         <th>Age</th>
-                      </tr>
+                </tr>
                       <tr>
                         <td>Jill</td>
                         <td>Smith</td>
@@ -37,6 +36,12 @@
                       </tr>
         </table>
 
+        <br>
+
+        
+        <div id="singleevent" class="greyborder" style="margin-top: 5%">
+
+        </div>
 
     </center>
 
