--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,8 @@
 <head>
     <meta charset="utf-8">
 
-    <title>The HTML5 Herald</title>
-    <meta name="description" content="The HTML5 Herald">
-    <meta name="author" content="SitePoint">
+    <title>Event planner</title>
+
     <link rel="stylesheet" href="index.css">
 </head>
 
