--- a/events.html
+++ b/events.html
@@ -12,28 +12,14 @@
 
 <body class="bg" onload = "getEvents()">
     <ul>
-        <li><a href="index.html">Create event</a></li>
-        <li><a href="#">See events</a></li>
+        <li><a href="index.html">Create Event</a></li>
+        <li><a href="#">See Events</a></li>
     </ul>
     <center>
 
 
-        <table id="mytable" style="width: 45%; margin-top: 5%;">
-                <tr>
-                        <th>Firstname</th>
-                        <th>Lastname</th>
-                        <th>Age</th>
-                </tr>
-                      <tr>
-                        <td>Jill</td>
-                        <td>Smith</td>
-                        <td>50</td>
-                      </tr>
-                      <tr>
-                        <td>Eve</td>
-                        <td>Jackson</td>
-                        <td>94</td>
-                      </tr>
+        <table id="mytable" class="table">
+
         </table>
 
         <br>
