added loading gif

--- a/public/event.html
+++ b/public/event.html
@@ -73,23 +73,6 @@
                     </div>
 
                     <div style="margin-left: 5%;">
-                        <h3>Transportation: </h3>
-                        <table class="tableEvent" id="caterings">
-                            <thead>
-                                <th>Name</th>
-                                <th>Type</th>
-                            </thead>
-                            <tbody id="transportationBody">
-
-                            </tbody>
-                        </table>
-                    </div>
-
-                </div>
-
-
-                <div style="display: flex; flex-direction: row;">
-                    <div style="margin-right: 5%;">
                         <h3>Add Participants: </h3>
                         <table class="tableEvent" id="participantTable">
                             <thead>
@@ -117,6 +100,14 @@
                         </div>
                         <button type="button" class="buttonEvent" onclick="submitParticipants()">Save changes</button>
                     </div>
+
+
+
+                </div>
+
+
+                <div style="display: flex; flex-direction: row;">
+
 
 
                     <div style="margin-left: 5%;">
@@ -147,7 +138,7 @@
 
     </div>
 
-    <script src="../js/event.js"></script>
+    <script src="./js/event.js"></script>
 </body>
 
 </html>
