--- a/public/events.html
+++ b/public/events.html
@@ -19,6 +19,7 @@
     <center>
 
         <div style="margin-top:1%; width: 80%;">
+            <div id="loadingDiv"></div>
             <table id="mytable" class="table">
 
             </table>
@@ -33,7 +34,7 @@
 
     </center>
 
-    <script src="../js/events.js"></script>
+    <script src="./js/events.js"></script>
 </body>
 
 </html>
