--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,6 @@
                             <option value="ses">Waiting for input</option>
                         </select>
                 </div>
-                <div id="transportationSelector">
-                    <h2<label>Transportation</label>
-                        <select multiple id="facility" class="inputText">
-                            <option value="ses">Waiting for input</option>
-                        </select>
-                </div>
                 <div id="accommodationSelector">
                     <h2>Accomodation</h2>
                     <form class="accomodation-availability-form" onsubmit="searchAvailability(event)">
@@ -62,7 +56,7 @@
 
     </center>
 
-    <script src="../js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
